--- a/theme.toml
+++ b/theme.toml
@@ -1,14 +1,14 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "Theme2"
+name = "an6474"
 license = "MIT"
 licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE.md"
 description = ""
 homepage = "http://example.com/"
 tags = []
 features = []
-min_version = "0.31.1"
+min_version = "0.38.2"
 
 [author]
   name = ""
